Fix margin gap between menu navigation, Add arrow to list items

--- a/style.css
+++ b/style.css
@@ -32,18 +32,25 @@
     height: 100%;
   }
 
+  .mobile_nav_items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 15px;
+  }
+
   .mobile_menu {
-    margin-top: 100px;
+    margin-top: 10px;
     padding-left: 40px;
     list-style-type: none;
     background-image: url('Images/mobile_menu_top.png');
     background-repeat: no-repeat;
     background-position: 0 8%;
-    height: 80%;
+    height: 100%;
   }
 
   .mobile_nav_close {
-    margin: 60px 30px 40px 40px;
+    margin: 60px 30px 5px 40px;
   }
 
   .mobile_nav_close img {
